Fixing double jump and adding title

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,24 @@
 
 body {
     background-color: black;
+}
+
+p {
     display: flex;
-    justify-content: center;
+    margin-top: 17px;
+    margin-left: 650px;
+    width: 250px;
+    align-items: center;
+    background-color: white;
+    font-size: 40px;
+}
+
+#o{
+    width: 30px;
+    height: 30px;
 }
 
 #mister-game{
-    margin-top: 75px;
+    margin-left: 230px;
+    margin-top: 5px;
 }
